--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,48 @@ body{
 
 }
 
+.category1{
+ margin:20%;
+ border:4px #000000 solid;
+ padding:10px;
+ border-radius:20px;
+}
+
+.category1 h2{
+ text-decoration: underline;
+ color:green;
+ text-align: center;
+}
+
+.category1 ul{
+ padding:20px;
+ list-style:square;
+ list-style:none;
+}
+
+.category1 li{
+padding-bottom:8px;
+border-bottom:dotted 1px #333
+
+}
+
+a{
+ text-decoration:none;
+ color:#000;
+}
+
+a:hover{
+ color:red;
+}
+
+a:active{
+ color:green;
+}
+
+a:visited{
+ color:yellow;
+}
+
 h1{
  color:green;
 }
