--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,51 @@ h1{
 }
 
 .my-form{
+ padding-top:20px;
+ padding-left:20px;
+ padding-right:20px;
 
+ margin-top:20px;
+ margin-bottom:20px;
+ margin-left:20px;
+ margin-right:20px;
 
- 
+ border-top:10px solid black;
+ border-left:10px solid black;
+ border-right:10px solid black;
+ border-bottom:10px solid black;
+}
+
+.my-form label{
+ display:block;
+}
+
+.my-form .form-gorup{
+ padding-bottom:15px;
+}
+
+.my-form input[type="submit"]{
+ color:#fff;
+ background-color:#333;
+ padding:10px 15px;
+ border:none;
+}
+
+.my-form input[type="submit"]:hover{
+ background: red;
+ color:#fff;
+}
+
+.button{
+ background-color:#333;
+ color:#fff;
+ padding:10px 15px;
+ border:none;
+}
+
+.button:hover{
+ background:red;
+ color:#fff;
 }
 
 
