--- a/course4 - Angela yu/styles.css
+++ b/course4 - Angela yu/styles.css
@@ -4,8 +4,7 @@
  background-color: coral;
  height: 200px;
  width: 200px;
- padding: 10px;
- margin: 10px;
+ padding: 20px;
  border:solid black;
 }
 
@@ -14,13 +13,15 @@
     width: 200px;
     background-color: red;
     border:solid black 20px;
+    margin-left: 33.33%;
 }
 
 .bottom-container{
     height: 200px;
     width: 200px;
-    background-color: blue;
+    background-color: yellow;
     border:solid black 10px;
+    margin-left: 66.66%;
 }
 
 
