--- a/course4 - Angela yu/styles.css
+++ b/course4 - Angela yu/styles.css
@@ -1,27 +1,60 @@
-
-
-.top-container {
- background-color: coral;
- height: 200px;
- width: 200px;
- padding: 20px;
- border:solid black;
+body{
+    margin: 0px;
+    text-align: center;
+    font-family: verdana, sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
+h1{
+    width: 30%;
+    margin: 0 auto;
+    font-family: 'Sacramento', cursive;
+    font-size: 4rem;
+    color: #66BFBF;
+    font-weight: normal;
+    line-height: 2;  /*1 woild be defaul*/
+}
+
+h2{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
+    line-height: 
+    
+}
+
+h3{
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+.top-container{
+    background-color: #E4F9F5;
+    position: relative;
+    padding: 100px;
+} 
+
 .middle-container{
-    height: 200px;
-    width: 200px;
     background-color: red;
-    border:solid black 20px;
-    margin-left: 33.33%;
+    width: 200px;
+    height: 200px;
 }
 
 .bottom-container{
-    height: 200px;
+    background-color: blue;
     width: 200px;
-    background-color: yellow;
-    border:solid black 10px;
-    margin-left: 66.66%;
+    height: 200px;
 }
 
+.bottom-cloud{
+    position: absolute;
+    left: 20%;
+    bottom: 60%; 
+}
 
+.top-cloud{
+    position: absolute;
+    right: 20%;
+    top: 10%;
+}
