--- a/course4 - Angela yu/styles.css
+++ b/course4 - Angela yu/styles.css
@@ -12,7 +12,7 @@ h1{
     font-size: 4rem;
     color: #66BFBF;
     font-weight: normal;
-    line-height: 2;  /*1 woild be defaul*/
+    line-height: 2;  /* 1 would be default */
 }
 
 h2{
@@ -20,7 +20,7 @@ h2{
     font-size: 2.5rem;
     color: #66BFBF;
     font-weight: normal;
-    line-height: 
+  
     
 }
 
