--- a/course4 - Angela yu/tindog/css/styles.css
+++ b/course4 - Angela yu/tindog/css/styles.css
@@ -1,16 +1,109 @@
 #title{
     background-color: #ff4c68;
+    color: #fff
 }
 
 h1 {
-    font-family: "Montserrat-Black";
-    font-size: 3rem;
+    font-family: "Montserrat";
+    font-size: 3.5rem;
     line-height: 1.5;
 }
 
+h2{
+    font-family: "Montserrat";
+    font-size: 3rem;
+}
+
+h3{
+    font-family: "Montserrat";
+    font-size: 1.5rem; 
+}
+
+.container-fluid{
+    padding: 3% 15%;
+}
+
+.download-button{
+    margin: 10px;
+}
+
+.fab{
+    margin: 5px;
+}
+
+.navbar{
+    padding:0 0 4.5rem;
+}
 
 
+.navbar-brand{
+    font-family: Ubuntu;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.nav-item{
+    padding:0 18px;
+    color: #000;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    color: #000;
+}
+
+.title-image{
+    width: 60%;
+    transform: rotate(25deg)
+}
+
+/* Features section */
+#features{
+    padding: 7% 15%;
+}
+
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+
+p {
+    color: #8f8f8f;
+}
 
 
+.icon{
+    color: #ef8172;
+    margin: 0 0 1rem 0 
+}
+
+.icon:hover{
+    color: #ff4c68;
+}
+
+/* Testimonial section */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding: 0 0 3% 0;
+}
 
 
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 50px 0;
+}
